adjusted nav, added borders for inventory calculation table

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="inventory.html">Inventory</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
