--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">INVENTORY MANAGER</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -32,9 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link" href="inventory.html">Inventory</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
@@ -49,7 +52,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Contact
-      <small>Subheading</small>
+      <small>Let us know what you think!</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -61,39 +64,7 @@
 
     <!-- Content Row -->
     <div class="row">
-      <!-- Map Column -->
-      <div class="col-lg-8 mb-4">
-        <!-- Embedded Google Map -->
-        <iframe style="width: 100%; height: 400px; border: 0;"
-          src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
-      </div>
-      <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
-        <h3>Contact Details</h3>
-        <p>
-          3481 Melrose Place
-          <br>Beverly Hills, CA 90210
-          <br>
-        </p>
-        <p>
-          <abbr title="Phone">P</abbr>: (123) 456-7890
-        </p>
-        <p>
-          <abbr title="Email">E</abbr>:
-          <a href="mailto:name@example.com">name@example.com
-          </a>
-        </p>
-        <p>
-          <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM
-        </p>
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <!-- Contact Form -->
-    <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <div class="row">
-      <div class="col-lg-8 mb-4">
         <h3>Send us a Message</h3>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group form-group">
@@ -121,7 +92,7 @@
           <div class="control-group form-group">
             <div class="controls">
               <label>Message:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required
+              <textarea rows="5" cols="100" class="form-control" id="message" required
                 data-validation-required-message="Please enter your message" maxlength="999"
                 style="resize:none"></textarea>
             </div>
@@ -131,9 +102,41 @@
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
         </form>
       </div>
-
+      <!-- Map Column -->
+      <div class="col-lg-5 mb-4">
+        <!-- Embedded Google Map --><iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8114.805507936808!2d24.728189642629196!3d59.43805490715095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46929362accade1b%3A0xa686d56a5389db84!2sToompea!5e0!3m2!1sen!2see!4v1613563105197!5m2!1sen!2see"
+          width="100%" height="100%" frameborder="0" style="border: 1px solid black;" allowfullscreen=""
+          aria-hidden="false" tabindex="0"></iframe>
+      </div>
+      <!-- Contact Details Column -->
+      <div class="col-lg-3 mb-4">
+        <h3>Contact Details</h3>
+        <p>
+          3481 Melrose Place
+          <br>Beverly Hills, CA 90210
+          <br>
+        </p>
+        <p>
+          <abbr title="Phone">P</abbr>: (123) 456-7890
+        </p>
+        <p>
+          <abbr title="Email">E</abbr>:
+          <a href="mailto:name@example.com">name@example.com
+          </a>
+        </p>
+        <p>
+          <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM
+        </p>
+      </div>
     </div>
-    <!-- /.row -->
+  </div>
+  <!-- /.row -->
+
+  <!-- Contact Form -->
+  <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+
+  <!-- /.row -->
 
   </div>
   <!-- /.container -->
